# terminAI

./: LICENSE  README.md  pyproject.toml  run_cli.py  setup.py
terminai/cli/: main.py
terminai/cli/commands/: ask.py  debug.py  init.py
terminai/cli/core/: ai.py  context.py
