[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminai"
version = "0.1.0"
description = "An AI-powered CLI assistant for terminal operations"
readme = "README.md"
authors = [
    {name = "Ayman Fouad"}
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.scripts]
terminai = "terminai.cli.main:main"